# google-mcps

./: .gitignore  README.md  pyproject.toml
calendar/: README.md  __init__.py  __main__.py  auth.py  client.py  models.py  server.py
forms/: README.md  __init__.py  __main__.py  auth.py  client.py  models.py  server.py
gmail/: README.md  __init__.py  __main__.py  auth.py  client.py  server.py
shared/: __init__.py  auth.py  paths.py
sheets/: README.md  __init__.py  __main__.py  auth.py  client.py  server.py
slides/: README.md  __init__.py  __main__.py  auth.py  client.py  models.py  server.py
tests/: __init__.py  test_gmail_client.py  test_shared_auth.py  test_sheets_client.py
